[package]
name = "test_ssz_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssz_rs = "0.7.0"
ssz_rs_derive = "0.7.0"
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v1.4.2" }
